added a trashcan image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h2>Author</h2>
           <h2>Title</h2>
           <h2>Year</h2>
-          <button class="deleteBtn">Delete</button>
+          <button class="deleteBtn"></button>
         </div>
       </template>
     </main>
