--- a/index.html
+++ b/index.html
@@ -14,30 +14,41 @@
     <main>
       <section>
         <form action="" id="addForm">
-          <label for="author">Author</label>
-          <input type="text" id="author" name="author" required />
-          <label for="title">Title</label>
-          <input type="text" id="title" name="title" required />
-          <label for="year">Year</label>
-          <input
-            type="number"
-            id="year"
-            name="year"
-            required
-            min="1900"
-            max="2025"
-          />
+          <field class="text">
+            <label for="author">Author</label>
+            <input type="text" id="author" name="author" required />
+          </field>
+          <field class="text">
+            <label for="title">Title</label>
+            <input type="text" id="title" name="title" required />
+          </field>
+          <field class="text" id="yearField">
+            <label for="year">Year</label>
+            <input
+              type="number"
+              id="year"
+              name="year"
+              required
+              min="1900"
+              max="2025"
+            />
+          </field>
           <button type="submit" id="addBtn">Add</button>
         </form>
       </section>
-      <template>
-        <div class="cd">
-          <h2>Author</h2>
-          <h2>Title</h2>
-          <h2>Year</h2>
-          <button class="deleteBtn"></button>
-        </div>
-      </template>
+      <section>
+        <table id="cdTable">
+          <thead>
+            <tr>
+              <th>Author</th>
+              <th>Title</th>
+              <th>Year</th>
+              <th>Delete</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </section>
     </main>
     <footer>
       <p>&copy; 2025 Simon Heegaard</p>
