--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music CDs</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
   </head>
   <body>
@@ -14,15 +14,15 @@
     <main>
       <section>
         <form action="" id="addForm">
-          <field class="text">
+          <div class="text">
             <label for="author">Author</label>
-            <input type="text" id="author" name="author" required />
-          </field>
-          <field class="text">
+            <input type="text" id="author" name="author" required>
+          </div>
+          <div class="text">
             <label for="title">Title</label>
-            <input type="text" id="title" name="title" required />
-          </field>
-          <field class="text" id="yearField">
+            <input type="text" id="title" name="title" required>
+          </div>
+          <div class="text" id="yearField">
             <label for="year">Year</label>
             <input
               type="number"
@@ -30,9 +30,8 @@
               name="year"
               required
               min="1900"
-              max="2025"
-            />
-          </field>
+              max="2025">
+          </div>
           <button type="submit" id="addBtn">Add</button>
         </form>
       </section>
